--- a/index.html
+++ b/index.html
@@ -2,81 +2,78 @@
 <html lang="zh-TW">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>首頁</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  
+  <title>登入</title>
+  <!-- 引入 Roboto 字體 -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <style>
+    /* 全局樣式：Roboto 字型、淺灰背景 */
     body {
       font-family: 'Roboto', sans-serif;
       background-color: #f0f0f0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
       margin: 0;
-      padding: 0;
     }
-
-    .navbar {
-      background-color: #333;
-      overflow: hidden;
-    }
-
-    .navbar a {
-      float: left;
-      display: block;
-      color: white;
-      text-align: center;
-      padding: 14px 20px;
-      text-decoration: none;
-      font-size: 17px;
-    }
-
-    .navbar a:hover {
-      background-color: #ddd;
-      color: black;
-    }
-
-    h1 {
-      text-align: center;
-      padding-top: 20px;
-    }
-
-    .button {
-      display: inline-block;
-      padding: 12px 25px;
-      background-color: #000000;
-      color: white;
-      text-align: center;
-      font-size: 16px;
+    /* 登入框樣式 */
+    .login-box {
+      background: #fff;
+      padding: 20px 30px;
       border-radius: 8px;
-      text-decoration: none;
-      transition: background-color 0.3s ease;
-      margin: 10px;
-      min-width: 180px;
-      height: 50px;
-      line-height: 50px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      width: 300px;
     }
-
-    .button:hover {
-      background-color: #808080;
-      transform: scale(1.1);
+    .login-box h2 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .login-box input {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    .login-box button {
+      width: 100%;
+      padding: 10px;
+      margin-top: 10px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    /* 按鈕 hover 特效 */
+    .login-box button:hover {
+      background-color: #357a38;
     }
   </style>
 </head>
 <body>
-
-  <!-- 導航列 -->
-  <div class="navbar">
-    <a href="index.html">首頁</a>
-    <a href="calculator.html">計算機</a>
-    <a href="learning-portfolio.html">學習歷程</a>
+  <div class="login-box">
+    <h2>會員登入</h2>
+    <input type="text" id="username" placeholder="帳號">
+    <input type="password" id="password" placeholder="密碼">
+    <button onclick="login()">登入</button>
   </div>
 
-  <h1>都快段考了我還在玩這個</h1>
-
-  <!-- 按鈕1 -->
-  <div style="text-align: center;">
-    <a href="calculator.html" class="button">進入計算機</a>
-    <a href="learning-portfolio.html" class="button">學習歷程</a>
-  </div>
-
+  <script>
+    // JavaScript 驗證函式
+    function login() {
+      var user = document.getElementById("username").value;
+      var pwd = document.getElementById("password").value;
+      // 檢查帳號和密碼
+      if (user === "admin" && pwd === "1234") {
+        // 正確：導向 home.html
+        window.location.href = "home.html";
+      } else {
+        // 錯誤：彈跳提示訊息
+        alert("帳號或密碼錯誤");
+      }
+    }
+  </script>
 </body>
 </html>
