--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       // 檢查帳號和密碼
       if (user === "admin" && pwd === "1234") {
         // 正確：導向 home.html
-        window.location.href = "home.html";
+        window.location.href = "calculater.html";
       } else {
         // 錯誤：彈跳提示訊息
         alert("帳號或密碼錯誤");
