--- a/login.html
+++ b/login.html
@@ -67,8 +67,8 @@
       var pwd = document.getElementById("password").value;
       // 檢查帳號和密碼
       if (user === "admin" && pwd === "1234") {
-        // 正確：導向 home.html
-        window.location.href = "calculator.html";
+        // 正確：導向 index.html
+        window.location.href = "index.html";
       } else {
         // 錯誤：彈跳提示訊息
         alert("帳號或密碼錯誤");
