--- a/mother'sday.html
+++ b/mother'sday.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>母親節快樂</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  
+
   <style>
     body {
       font-family: 'Roboto', sans-serif;
@@ -68,7 +68,21 @@
   <!-- 按鈕1 -->
   <div style="text-align: center;">
     <a href="sth.html" class="button">給媽媽的話</a>
-      </div>
+  </div>
+
+  <!-- 引入 canvas-confetti 套件 -->
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+
+  <script>
+    // 在網頁載入完成時噴一次彩帶
+    window.onload = function() {
+      confetti({
+        particleCount: 150,
+        spread: 120,
+        origin: { y: 0.6 }
+      });
+    };
+  </script>
 
 </body>
 </html>
